# Project-s-DNA

./: .dockerignore  .gitignore  DEBUG_REPORT.md  Dockerfile  HOW_TO_USE.md  README.md  VERIFICATION_REPORT.md  after_fix15_output.json  baseline2_output.json  baseline_output.json  benchmark.py  build_perf_target.py  compare_benchmark.py  debug_norm.py  docker-compose.yml  inspect_norm.py  opencode.json  pytest.ini  render.yaml  requirements.txt  start.py  start_server.ps1  temp_check.py  test_endpoints.py  test_js.py  timing_runner.py  tree_test.py  verify_analysis.py
backend/: pyproject.toml
backend/dna/: config.py  logging.py  models.py  pipeline_config.json  profiling.py  remote.py  threadpool.py
backend/dna/api/: analysis.py  app.py  auth.py  context.py  middleware.py
backend/dna/discovery/: __init__.py  build_system.py  frameworks.py  git.py  ignore.py  languages.py  orchestrator.py  scanner.py
backend/dna/engines/: evolution.py  knowledge.py  risk.py  structural.py
backend/dna/entities/: __init__.py  builder.py
backend/dna/evidence/: __init__.py  store.py
backend/dna/git_history/: __init__.py  author_analyzer.py  blame.py  branch_detector.py  commit_parser.py  diff_analyzer.py  errors.py  miner.py  tag_mapper.py
backend/dna/graph/: __init__.py  builder.py
backend/dna/indexer/: __init__.py  classifier.py  errors.py  hasher.py  inventory.py  orchestrator.py  tree.py
backend/dna/normalizer/: __init__.py  js_normalizer.py  orchestrator.py  python_normalizer.py  ts_normalizer.py
backend/dna/parser/: __init__.py  ast_builder.py  complexity.py  (+6 more)
(+340 files in other folders)
